@@ -1,3 +1,9 @@
+Wed Jun 15 09:03:06 GMT 2011  Olly Betts <olly@survex.com>
+
+	* xapian-core/backends/remote/remote-database.cc,
+	  xapian-core/common/remote-database.h: Factor out the code to decode
+	  the returned stats into a new apply_stats_update() method.
+
 Wed Jun 15 08:57:12 GMT 2011  Olly Betts <olly@survex.com>
 
 	* xapian-core/Makefile.am: Remove check-* from .PHONY as that doesn't
